Fix close button spacing and visibility transitions

--- a/blocks/popup/__close-button/_photo/popup__close-button_photo.css
+++ b/blocks/popup/__close-button/_photo/popup__close-button_photo.css
@@ -1,8 +1,13 @@
-@media screen and (max-width: 700px) {
-     .popup__close-button_photo {
-         width: 30px;
-         height: 30px;
-         margin-bottom: 0;
-         margin-right: -30px;
-     }
- }
+.popup__close-button_photo {
+    width: 30px;
+    height: 30px;
+    margin: 0 -30px 0 0;
+}
+
+@media screen and (min-width: 700px) {
+    .popup__close-button_photo {
+        min-width: 40px;
+        min-height: 40px;
+        margin-right: -40px;
+    }
+}
